@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.40 2004/06/02 18:50:26 bouyer Exp $
+# $NetBSD: Makefile,v 1.41 2004/06/04 14:05:53 xtraeme Exp $
 
-DISTNAME=	squirrelmail-1.4.3
-PKGREVISION=	1
+DISTNAME=	squirrelmail-1.4.3a
 CATEGORIES=	mail www
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=squirrelmail/}
 EXTRACT_SUFX=	.tar.bz2
